REFACTOR: FT use LiveServerTestCase, fixed minor URL bug in problems.html

--- a/posts/templates/home.html
+++ b/posts/templates/home.html
@@ -5,6 +5,6 @@
 
 	<body>
 		<h1>Welcome</h1>
-		<a id="id_problems_link" href="problems.html">Problems</a>
+		<a id="id_problems_link" href="problems/">Problems</a>
 	</body>
 </html>
