Problems page contains text box and title

--- a/posts/templates/problems.html
+++ b/posts/templates/problems.html
@@ -1,4 +1,12 @@
 <html>
+	<head>
+		<title>Problems - *SITENAME*</title>
+	</head>
 
+	<body>
+		<form method="POST">
+			<textarea id="id_new_post" placeholder="Type your thoughts here!" maxlength="500"></textarea>
+		</form>
+	</body>
 
 </html>
