--- a/posts/templates/problems.html
+++ b/posts/templates/problems.html
@@ -5,7 +5,8 @@
 
 	<body>
 		<form method="POST">
-			<textarea id="id_new_post" placeholder="Type your thoughts here!" maxlength="500"></textarea>
+			<input id="id_new_post" placeholder="Type your thoughts here!" />
+			{% csrf_token %}
 		</form>
 	</body>
 
