Template can save and display multiple posts

--- a/posts/templates/problems.html
+++ b/posts/templates/problems.html
@@ -9,7 +9,11 @@
 			{% csrf_token %}
 		</form>
 
-		<p> {{ post_content_display }} </p>
+		<div>
+		{% for post in posts %}
+			<p> {{ post.text }} </p>
+		{% endfor %}
+		</div>
 	</body>
 
 </html>
