--- a/posts/templates/home.html
+++ b/posts/templates/home.html
@@ -1,5 +1,8 @@
 <html>
+{% load static %}
 	<head>
+		<!-- Twitter bootstrap -->
+		<link rel="stylesheet" href="{% static '/static/posts/css/bootstrap.min.css' %}"> 
 		<title>Welcome To *SITENAME*</title>
 	</head>
 
@@ -17,5 +20,9 @@
 		</div>
 
 		<a id="id_problems_link" href="problems/">Problems</a>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.9.1.min.js' %}"><\/script>')</script>
+	<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script> 
 	</body>
 </html>
