--- a/posts/templates/problems.html
+++ b/posts/templates/problems.html
@@ -1,5 +1,7 @@
 <html>
+{% load static %}
 	<head>
+		<link rel="stylesheet" href="{% static '/static/posts/css/bootstrap.min.css' %}"> 
 		<title>Problems - *SITENAME*</title>
 	</head>
 
@@ -15,6 +17,9 @@
 			<p> {{ post.text }} </p>
 		{% endfor %}
 		</div>
-	</body>
 
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.9.1.min.js' %}"><\/script>')</script>
+	<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script> 
+	</body>
 </html>
