Removed posts dir in static dir. Updated ref in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	{% block stylesheets %}
-		<link rel="stylesheet" href="{% static '/static/posts/css/bootstrap.min.css' %}"> 
+		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}Welcome To *SITENAME*{% endblock title %}
