newUserForm accepts inputs, loginbox and navbar in base.html

--- a/templates/newUserForm.html
+++ b/templates/newUserForm.html
@@ -1,4 +1,19 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block content %}
+	{{ block.super }}
+	<form method="POST">
+		{% csrf_token %}
+		<label for="id_new_username">Username:</label> 
+		<input type="text" id="id_new_username" />
+		<label for="id_new_password">Password:</label> 
+		<input type="password" id="id_new_password"/>
+		<label for="id_new_password_ver">Verify Password:</label> 
+		<input type="password" id="id_new_password_ver" />
+		<label for="id_new_email">Email:</label> 
+		<input type="text" id="id_new_email"/> <!-- Change to email type? -->
 
+		<button type="submit" name="create">Create</button>	
+	</form>
+{% endblock content %}
