--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,26 @@
 </head>
 
 <body>
+	{% block login %}
+		<div id="id_login_box" style="border:2px solid black">
+			<form method="POST">
+				{% csrf_token %}
+				<label for="id_user_login">Username:</label> 
+				<input type="text" name="username" id="id_user_login" />
+				<label for="id_pass_login">Password:</label> 
+				<input type="password" name="password" id="id_pass_login"/>
+				<button type="submit" name="login">Login</button>
+				<a id="id_create_account_link" href="{% url 'createAccount' %}">Create Account</a>
+			</form>
+		</div>
+
+	{% endblock login %}
+
+	{% block navbar %}
+		<a id="id_home_link" href="{% url 'home' %}">Home</a>
+		<a id="id_problems_link" href="{% url 'problems' %}">Problems</a>
+	{% endblock navbar %}
+
 	{% block content %}
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.9.1.min.js' %}"><\/script>')</script>
