Added registration package, need to create templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 				<label for="id_pass_login">Password:</label> 
 				<input type="password" name="password" id="id_pass_login"/>
 				<button type="submit" name="login">Login</button>
-				<a id="id_create_account_link" href="{% url 'createAccount' %}">Create Account</a>
+{#				<a id="id_create_account_link" href="{% url 'createAccount' %}">Create Account</a>  #}
 			</form>
 		</div>
 
