Updated model/view/template to display time posted and modified

--- a/templates/problems.html
+++ b/templates/problems.html
@@ -13,7 +13,7 @@
 
 	<div>
 	{% for post in posts %}
-		<p> {{ post.text }} </p>
+		<p> {{ post.text }} was posted at {{ post.timeCreated }} and last modified at {{ post.timeModified }} </p>
 	{% endfor %}
 	</div>
 {% endblock content %}
