--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
 	{% endblock stylesheets %}
 	<title>
-		{% block title %}Welcome To *SITENAME*{% endblock title %}
+		{% block title %}Welcome to YouTalkEdu{% endblock title %}
 	</title>
 </head>
 
