--- a/templates/problems.html
+++ b/templates/problems.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}Problems - *SITENAME*{% endblock title %}
+{% block title %}Problems - YouTalkEdu{% endblock title %}
 
 {% block content %}
 	{{ block.super }}
