--- a/templates/problems.html
+++ b/templates/problems.html
@@ -13,7 +13,8 @@
 
 	<div>
 	{% for post in posts %}
-		<p> {{ post.text }} was posted at {{ post.timeCreated }} and last modified at {{ post.timeModified }} </p>
+		<h4>{{ post.text }}</h4>
+		<p>Posted by {{post.user_id }} at {{ post.timeCreated }} and last modified at {{ post.timeModified }} </p>
 	{% endfor %}
 	</div>
 {% endblock content %}
