--- a/templates/problems.html
+++ b/templates/problems.html
@@ -14,7 +14,8 @@
 	<div>
 	{% for post in posts %}
 		<h4>{{ post.text }}</h4>
-		<p>Posted by {{post.user_id }} at {{ post.timeCreated }} and last modified at {{ post.timeModified }} </p>
+		<p>Posted by <a href="{% url 'user_page' user=post.user_id %}">{{ post.user_id }}</a>
+		at {{ post.timeCreated }} and last modified at {{ post.timeModified }} </p>
 	{% endfor %}
 	</div>
 {% endblock content %}
