--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	{{ block.super }}
-	<h4> Here are the posts for {{ user_object.username }}: </h4>
+	<h4>User type = {{ user_object.get_user_type_display }}. Here are the posts for {{ user_object.username }}: </h4>
 	{% for posts in user_posts %}
 		<p>{{ forloop.counter }}: {{ posts.text }}</p>
 	{% endfor %}
