Multiple pages with posts, need tests for this and user_type

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,12 @@
 	{% block navbar %}
 		<a id="id_home_link" href="{% url 'home' %}">Home</a>
 		<a id="id_problems_link" href="{% url 'problems' %}">Problems</a>
+		<a id="id_ideas_link" href="{% url 'ideas' %}">Ideas</a>
+		<a id="id_questions_link" href="{% url 'questions' %}">Questions</a>
+		<a id="id_site_feedback_link" href="{% url 'site_feedback' %}">Site Feedback</a>
+
+
+
 	{% endblock navbar %}
 
 	{% block content %}
