--- a/templates/site_feedback.html
+++ b/templates/site_feedback.html
@@ -7,15 +7,17 @@
 	{{ block.super }}
 	<form method="POST">
 		{% csrf_token %}
-		<input id="id_new_post" name="post_content" placeholder="Type your thoughts here!" />
+		<input id="id_new_post_title" name="post_title" placeholder="Title" />
+		<textarea id="id_new_post_content" name="post_content" rows="3" cols="8" 
+			placeholder="Type your thoughts here!"></textarea>
 		<button id="id_post_button" type="submit">Post</button>	
 	</form>
 
 	<div>
 	{% for post in posts %}
-		<h4>{{ post.text }}</h4>
+		<a href="{% url 'post_page' post_id=post.id %}"><h4>{{ post.title }}</h4></a>
 		<p>Posted by <a href="{% url 'user_page' user=post.user_id %}">{{ post.user_id }}</a>
-		at {{ post.timeCreated }} and last modified at {{ post.timeModified }}. 
+		at {{ post.timeCreated }} and last modified at {{ post.timeModified }}
 		User type={{ post.user_id.get_user_type_display }} </p>
 	{% endfor %}
 	</div> 
