--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -6,7 +6,7 @@
 {% block content %}
 	{{ block.super }}
 	<h4>User type = {{ user_object.get_user_type_display }}. Here are the posts for {{ user_object.username }}: </h4>
-	{% for posts in user_posts %}
-		<p>{{ forloop.counter }}: {{ posts.text }}</p>
+	{% for post in user_posts %}
+		<p>{{ forloop.counter }}: <a href="{% url 'post_page' post_id=post.id %}">{{ post.title }}</a></p>
 	{% endfor %}
 {% endblock content %}
