--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -1,6 +1,8 @@
 <!-- Will be called with form needed to be edited -->
 {% extends "base.html" %}
 
+{% block title %}Edit post - YouTalkEdu{% endblock title %}
+
 {% block content %}
 	{{ block.super }}
 	<form method="POST" action="{% url 'post_edit' id=id %}">
