--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}Post {{ post_object.id }} - YouTalkEdu{% endblock title %}
+{% block title %}Post {{ post.id }} - YouTalkEdu{% endblock title %}
 
 {% block content %}
 	{{ block.super }}
-	<h4>Title: {{ post_object.title }}</h4>
-	<p>Text: {{ post_object.text }}</p>
+	<h4>Title: {{ post.title }}</h4>
+	<p>Text: {{ post.text }}</p>
+	<p>Posted by: <a href="{% url 'user_page' user=post.user_id %}">{{ post.user_id }}</a></p>
 {% endblock content %}
