--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -8,6 +8,6 @@
 	<form method="POST" action="{% url 'post_edit' id=id %}">
 		{% csrf_token %}
 		{{ form.as_p }}
-		<button id="id_post_button" type="submit">Update</button>	
+		<button name="update" type="submit">Update</button>	
 	</form>
 {% endblock content %}
