Fixed bad comments in templates

--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -1,4 +1,4 @@
-<!-- Will be called with form needed to be edited -->
+{# Will be called with form needed to be edited #}
 {% extends "base.html" %}
 
 {% block title %}Edit post - YouTalkEdu{% endblock title %}
