--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
-<!-- Email for password reset -->
-<!-- Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html -->
+{# Email for password reset #}
+{# Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html #}
 {% autoescape off %}
 You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
 
