--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,5 +1,5 @@
-<!-- Successful password reset -->
-<!-- Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html -->
+{# Successful password reset #}
+{# Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html #}
 {% extends "base.html" %}
 {% load staticfiles %}
 
