--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
-<!-- Form for resetting password -->
-<!-- Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html -->
+{# Form for resetting password #}
+{# Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html #}
 {% extends "base.html" %}
 {% load staticfiles %}
 
