--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
-<!-- Prompts user to enter email to reset password -->
-<!-- Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html -->
+{# Prompts user to enter email to reset password #}
+{# Credit for outline: http://garmoncheg.blogspot.com/2012/07/django-resetting-passwords-with.html #}
 {% extends "base.html" %}
 {% load staticfiles %}
 
