Tests updated, check for password change and reset

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -13,7 +13,7 @@
 		{{ form.email.errors }}
 		<p>
 			<label for="id_email">E-mail address:</label> {{ form.email }} 
-			<input type="submit" value="Reset password" />
+			<input type="submit" name="reset_pass_submit" value="Reset password" />
 		</p>
 	</form>
 {% endblock content %}
