--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -23,7 +23,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" value="Change my password" /></td>
+				<td><input type="submit" name="pass_change_submit" value="Change my password" /></td>
 			</tr>
 		</table>
 	</form>
