--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,8 @@
 		<div id="id_login_box" style="border:2px solid black">
 			{% if user.is_anonymous %} 
 				<!-- If success, stays on current page. Else, redirects to /accounts/login -->
-				{% if form.errors %}
-					<p>Either the username does not exist, or the incorrect password was entered. 
-					Please try again.</p>
-				{% endif %}
-				<form method="POST" action="{% url 'auth_login' %}"> <!-- Calls auth.views.login -->
+				<form method="POST" action="{% url 'auth_login' %}?next={{request.path}}"> 
+									<!-- Calls auth.views.login -->
 					{% csrf_token %}
 					<label for="id_user_login">Username:</label> 
 					<input type="text" name="username" id="id_user_login" />
@@ -26,7 +23,6 @@
 					<input type="password" name="password" id="id_pass_login"/>
 					<button type="submit" name="login">Login</button>
 					<label><input type="checkbox" name="remember_me"/>Remember me</label>
-					<input type="hidden" name="next" value="{{ request.get_full_path }}" />
 					<a href="/accounts/register">Create Account</a>
 					<a href="{% url 'password_reset' %}">Reset password</a>
 				</form>
