--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -1,11 +1,36 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load disqus_tags %}
 
-{% block title %}Post {{ post.id }} - YouTalkEdu{% endblock title %}
+{% block title %}Post {{ post_object.id }} - YouTalkEdu{% endblock title %}
 
 {% block content %}
 	{{ block.super }}
-	<h4>Title: {{ post.title }}</h4>
-	<p>Text: {{ post.text }}</p>
-	<p>Posted by: <a href="{% url 'user_page' user=post.user_id %}">{{ post.user_id }}</a></p>
+	<h4>Title: {{ post_object.title }}</h4>
+	<p>Text: {{ post_object.text }}</p>
+	<p>Posted by: <a href="{% url 'user_page' user=post_object.user_id %}">{{ post_object.user_id }}</a></p>
+	<p> The post id is: {{ post_object.id}} </p>
+	<p> The post URL: {{ post_object.get_absolute_url }}
+	
+
+	{# DISQUS #}
+	<div id="disqus_thread"></div>
+	<script type="text/javascript">
+	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+	var disqus_shortname = 'YouTalkEdu'; // required
+	var disqus_identifier = '{{ post_object.id }}';
+	var disqus_url = 'http://localhost:8000{{ post_object.get_absolute_url }}';
+	var disqus_title = '{{ post_object.title }}';
+	var disqus_developer = 1;
+
+	/* * * DON'T EDIT BELOW THIS LINE * * */
+	(function() {
+        	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            	dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	})();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
 {% endblock content %}
