Search link added, need to test url ref

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,7 @@
 		<a id="id_ideas_link" href="{% url 'ideas' %}">Ideas</a>
 		<a id="id_questions_link" href="{% url 'questions' %}">Questions</a>
 		<a id="id_site_feedback_link" href="{% url 'site_feedback' %}">Site Feedback</a>
-
-
-
+		<a href="{% url 'search' %}">Search</a>
 	{% endblock navbar %}
 
 	{% block content %}
