--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -16,11 +16,11 @@
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+	var disqus_developer = 1;
 	var disqus_shortname = 'YouTalkEdu'; // required
-	var disqus_identifier = '{{ post_object.id }}';
+	var disqus_identifier = '{{ post_object.get_absolute_url }}';
 	var disqus_url = 'http://localhost:8000{{ post_object.get_absolute_url }}';
 	var disqus_title = '{{ post_object.title }}';
-	var disqus_developer = 1;
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
