Overall percentage for posts created, added, and tested

--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -6,8 +6,10 @@
 	{{ block.super }}
 	<h4>User type = {{ user_object.get_user_type_display }}. Here are the posts for {{ user_object.username }}: </h4>
 	{% for post in user_posts %}
-		<p>{{ forloop.counter }}: <a href="{% url 'post_page' post_id=post.id %}">{{ post.title }}</a></p>
+		<p>{{ forloop.counter }}: <a href="{% url 'post_page' post_id=post.id %}">{{ post.title }}</a>.
+		Overall rating: {{ post.get_vote_percentage }}</p>
 	{% endfor %}
+	<br/><br/>
 
 	{% if user_object == request.user %}
 		<p><a href="{% url 'django.contrib.auth.views.password_change' %}">Change your password</a></p>
