--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -8,7 +8,7 @@
 	{{ block.super }}
 	
 	{% if user.is_authenticated %}
-		<br/><br/>
+		<br/ id="id_line_break"><br/>
 		{# Automatically re-display form if error #}
 		{% if form.errors %}
 			{{ form.non_field_errors }}
@@ -22,17 +22,20 @@
 			</div>
 		{# Otherwise hide form so it's not in the way #}
 		{% else %}
-			<a id="id_show_form" style="font-size:1.2em; font-style:italic">Click me to create a post</a>
+			<a id="id_show_form" style="font-size:1.2em; font-style:italic">Click me to create a post</a><br/>
+
 			<script type="text/javascript">
 				jQuery(document).ready(function(){
     					$('#id_post_form').hide();			
   	 				$('#id_show_form').click(function() {
     						$('#id_post_form').show();
     						$('#id_show_form').hide();
+    						$('#id_line_break').hide();
     						});
 				});
 			</script>
  			<div id="id_post_form">
+			<p>PLEASE NOTE: You cannot post more than 5 times in a 24 hour period.</p>
 			<form method="POST" action="{% url 'post_new' page_abbrev %}?next={{request.path}}">
 				{% csrf_token %}
 				{% render_honeypot_field %}
@@ -45,7 +48,7 @@
 	
 
 	{# Sort by links #}
-	<br/><br/>
+	<br/>
 	<div>
 		<p> Sort by:
 			<a href="{% url 'post_page_base' page=current_page sort_id=1%}">Most Recent</a>
